production env added

--- a/adminSide/adminSide/.env
+++ b/adminSide/adminSide/.env
@@ -1,5 +1,8 @@
-DB_USER=root
-DB_PASSWORD=root1234
-DB_HOST=localhost
+#DB_USER=root
+#DB_PASSWORD=root1234
+#DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=healthApp
+DB_HOST=database-1.cgd00p3o9epw.us-east-2.rds.amazonaws.com
+DB_PASSWORD=2RKKubjzg3SwGU7
+DB_USER=admin
